--- a/MoviesKu/Module/Home/View/Base.lproj/Main.storyboard
+++ b/MoviesKu/Module/Home/View/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="27r-IU-tgP">
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="140" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="27r-IU-tgP">
                                                 <rect key="frame" x="8" y="548.5" width="398" height="400"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
@@ -72,10 +72,10 @@
                                                 </constraints>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="drK-de-bzx">
-                                                        <rect key="frame" x="0.0" y="44.5" width="398" height="44"/>
+                                                        <rect key="frame" x="0.0" y="44.5" width="398" height="140"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="drK-de-bzx" id="qtf-03-fIB">
-                                                            <rect key="frame" x="0.0" y="0.0" width="398" height="44"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="398" height="140"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </tableViewCellContentView>
                                                     </tableViewCell>
@@ -133,11 +133,28 @@
                     <navigationItem key="navigationItem" title="MoviesKu" id="Fbt-wU-GHd"/>
                     <connections>
                         <outlet property="nowPlayingCell" destination="F2X-Wm-P1a" id="10S-4b-Uoj"/>
+                        <outlet property="popularTableView" destination="27r-IU-tgP" id="QLa-P1-2a8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1957.9710144927537" y="26.785714285714285"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="qu5-8X-K4Q">
+            <objects>
+                <viewController storyboardIdentifier="DetailView" id="jrh-vy-Drx" customClass="DetailViewController" customModule="MoviesKu" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="M6V-1c-EtY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="nkL-J2-52V"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gZx-Sb-mR0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8iY-b1-Eay" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3197" y="27"/>
         </scene>
         <!--Favorite-->
         <scene sceneID="m7L-2I-Dpw">
