--- a/MoviesKu/Module/Home/View/Base.lproj/Main.storyboard
+++ b/MoviesKu/Module/Home/View/Base.lproj/Main.storyboard
@@ -164,6 +164,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Favorite" id="SkN-0o-hvm"/>
+                    <connections>
+                        <outlet property="favoriteTableView" destination="VCz-gy-2dG" id="cSP-Mj-W3m"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nxK-2q-xFm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -210,8 +213,8 @@
                 <navigationController storyboardIdentifier="FavoriteNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="8cb-pB-kDv" customClass="FavoriteNavigationController" customModule="MoviesKu" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Favorite" selectedImage="heart" catalog="system" id="CP1-YT-cFX"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="1WH-cb-64q">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1WH-cb-64q">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
